@@ -232,17 +232,17 @@ class BootAPI:
         self.log("add_repo",[ref.name])
         return self._config.repos().add(ref,save=True,check_for_duplicate_names=check_for_duplicate_names)
 
-    def find_distro(self, name=None, return_list=False, **kargs):
-        return self._config.distros().find(name=name, return_list=return_list, **kargs)
+    def find_distro(self, name=None, return_list=False, no_errors=False, **kargs):
+        return self._config.distros().find(name=name, return_list=return_list, no_errors=no_errors, **kargs)
 
-    def find_profile(self, name=None, return_list=False, **kargs):
-        return self._config.profiles().find(name=name, return_list=return_list, **kargs)
+    def find_profile(self, name=None, return_list=False, no_errors=False, **kargs):
+        return self._config.profiles().find(name=name, return_list=return_list, no_errors=no_errors, **kargs)
 
-    def find_system(self, name=None, return_list=False, **kargs):
-        return self._config.systems().find(name=name, return_list=return_list, **kargs)
+    def find_system(self, name=None, return_list=False, no_errors=False, **kargs):
+        return self._config.systems().find(name=name, return_list=return_list, no_errors=no_errors, **kargs)
 
-    def find_repo(self, name=None, return_list=False, **kargs):
-        return self._config.repos().find(name=name, return_list=return_list, **kargs)
+    def find_repo(self, name=None, return_list=False, no_errors=False, **kargs):
+        return self._config.repos().find(name=name, return_list=return_list, no_errors=no_errors, **kargs)
 
     def dump_vars(self, obj, format=False):
         return obj.dump_vars(format)
