@@ -183,16 +183,16 @@ class Item(serializable.Serializable):
 	"""
         return False
 
-    def find_match(self,kwargs):
+    def find_match(self,kwargs,no_errors=False):
         # used by find() method in collection.py
         data = self.to_datastruct()
         for (key, value) in kwargs.iteritems():
-            if not self.find_match_single_key(data,key,value):
+            if not self.find_match_single_key(data,key,value,no_errors):
                 return False
         return True
  
 
-    def find_match_single_key(self,data,key,value):
+    def find_match_single_key(self,data,key,value,no_errors=False):
         # special case for systems
         key_found_already = False
         if data.has_key("interfaces"):
@@ -205,13 +205,55 @@ class Item(serializable.Serializable):
 
         if not data.has_key(key):
             if not key_found_already:
-                raise CX(_("searching for field that does not exist: %s" % key))
+                if not no_errors:
+                   raise CX(_("searching for field that does not exist: %s" % key))
             else:
-                return False
-        if value.lower() == data[key].lower():
+                if value is not None: # FIXME: new?
+                   return False
+
+        if value is None:
             return True
         else:
-            return False
+            return self.__find_compare(value, data[key])
+
+    def __find_compare(self, from_search, from_obj):
+
+        if type(from_obj) == type(""):
+            if from_obj.lower() == from_search.lower():
+                return True
+            else:
+                return False    
+        
+        if type(from_search) != type(from_obj):
+            if type(from_search) == type(""):
+                if type(from_obj) == type([]):
+                    from_search = utils.input_string_or_list(from_search,delim=',')
+                    for x in from_search:
+                        if x not in from_obj:
+                            return False
+                    return True            
+
+                if type(from_obj) == type({}):
+                    (junk, from_search) = utils.input_string_or_hash(from_search,delim=" ")
+                    for x in from_search.keys():
+                        y = from_search[x]
+                        if not from_obj.has_key(x):
+                            return False
+                        if not (y == from_obj[x]):
+                            return False
+                    return True
+
+                if type(from_obj) == type(True):
+                    if from_search.lower() in [ "true", "1", "y", "yes" ]:
+                        inp = True
+                    else:
+                        inp = False
+                    if inp == from_obj:
+                        return True
+                    return False
+                
+            raise CX(_("find cannot compare type: %s") % type(from_obj)) 
+
 
     def dump_vars(self,data,format=True):
         raw = utils.blender(self.config.api, False, self)
