@@ -27,13 +27,13 @@ import cexceptions
 class ProfileFunction(commands.CobblerFunction):
 
     def help_me(self):
-        return commands.HELP_FORMAT % ("cobbler profile","<add|edit|copy|list|rename|remove|report> [ARGS|--help]")
+        return commands.HELP_FORMAT % ("cobbler profile","<add|copy|edit|find|list|rename|remove|report> [ARGS|--help]")
 
     def command_name(self):
         return "profile"
 
     def subcommands(self):
-        return [ "add", "edit", "copy", "rename", "remove", "list", "report", "dumpvars" ]
+        return [ "add", "copy", "dumpvars", "edit", "find", "list", "remove", "rename", "report" ]
 
     def add_options(self, p, args):
 
@@ -55,10 +55,11 @@ class ProfileFunction(commands.CobblerFunction):
         if "copy" in args or "rename" in args:
             p.add_option("--newname", dest="newname")
 
-        if not self.matches_args(args,["dumpvars","remove","report", "list"]):
+        if not self.matches_args(args,["dumpvars","find","remove","report", "list"]):
             p.add_option("--no-sync",     action="store_true", dest="nosync", help="suppress sync for speed")
-        if not self.matches_args(args,["dumpvars","report", "list"]):
+        if not self.matches_args(args,["dumpvars","find","report", "list"]):
             p.add_option("--no-triggers", action="store_true", dest="notriggers", help="suppress trigger execution")
+        if not self.matches_args(args,["dumpvars","report", "list"]):
             p.add_option("--owners", dest="owners", help="specify owners for authz_ownership module")
 
         if self.matches_args(args,["remove"]):
@@ -75,6 +76,12 @@ class ProfileFunction(commands.CobblerFunction):
             p.add_option("--virt-type",        dest="virt_type", help="ex: 'xenpv', 'qemu'")
 
     def run(self):
+
+        if "find" in self.args:
+            items = self.api.find_profile(return_list=True, no_errors=True, **self.options.__dict__)
+            for x in items:
+                print x.name
+            return 0
 
         if self.matches_args(self.args,["report","list","remove","dumpvars"]) or not self.options.inherit:
             obj = self.object_manipulator_start(self.api.new_profile,self.api.profiles,subobject=False)
