@@ -4,6 +4,7 @@ Cobbler CHANGELOG
 - ??? - 1.1.0
 - devel branch
 - added cobbler aclsetup command for running cobbler as non-root
+- added cobbler find command to do searches from the command line
 
 - Wed Jun 03 2008 - 1.0.3
 - Fix error message output from failed kickstart rendering
